--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -3,7 +3,7 @@
   <div class="flex flex-wrap  ">
     <div class="mx-auto w-full lg:w-1/2 px-4 ">
 
-      <div class="flex flex-col mb-8 bg-white rounded shadow p-6 mt-24 ">
+      <div class="flex flex-col mb-8 bg-white rounded shadow p-6 mt-24 mb-56 ">
         <div class="flex justify-between items-start">
           <h1 class="text-3xl font-bold text-gray-800 mb-4"><%= @category.name %></h1>
           <% if current_user %>
